# df_forum

./: Cargo.toml  README.md  index.html  styles.css
.art/: settings.toml
.github/workflows/: test.yml
backend/: Cargo.toml
backend/src/: connection.rs  forum_minimal.rs  lib.rs  main.rs
backend/src/dataflows/: mod.rs  page_post_ids.rs  post_aggr.rs  post_liked_by_user.rs  post_total_likes.rs  posts.rs  user_like_count.rs  user_post_count.rs
backend/tests/: integration.rs
design/: events.md  forum.md  forum_minimal.md  sketch02.css  sketch02.html  sketch02_chose.html
frontend/: Cargo.toml  index.html  styles.css  websockets.js
frontend/src/: connection.rs  df_tuple_items.rs  lib.rs  persisted.rs  query_result.rs
frontend/src/operators/: only_latest.rs
frontend/tests/: integration.rs
src/: lib.rs  main.rs
src/operators/: mod.rs  only_latest.rs
tests/: integration.rs
