[package]
name = "df_forum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]

# IMPORTANT - add to ../differential-dataflow/Cargo.toml
# timely = { path = "../timely-dataflow/timely/", default-features = false }
 
differential-dataflow = { path = "../differential-dataflow/" }
# should be on "instant_wasm_compat" branch
timely = { path = "../timely-dataflow/timely/", default-features = false }
wasm-bindgen = "0.2.82"
web-sys = { version = "0.3.59", features = ["Document", "Element", "HtmlElement", "Node", "Window"] }
