[package]
name = "df_forum_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
abomonation = "0.7.3"
abomonation_derive = "0.5.0"
differential-dataflow = "0.12.0"
futures-channel = "0.3.24"
futures-util = { version = "0.3.24", features = ["io"] }
# differential-dataflow = { path = "../differential-dataflow", default-features = false }
serde = { version = "1.0.144", features = ["serde_derive"] }
serde_derive = "1.0.144"
timely = { version = "0.12.0", features = ["bincode"] }
tokio = { version = "1.21.1", features = ["full"] }
tokio-tungstenite = "0.17.2"
